# nguserver

./: .gitignore  Cargo.toml  settings-example.json  tampermonkey.js
.github/workflows/: release.yml
src/: main.rs
