[package]
name = "nguserver"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = "0.4.38"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'